--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [access "refs/heads/*"]
-	create = group falcon maintainers
-	push = group falcon maintainers
-	label-Code-Review = -2..+2 group falcon maintainers
-	label-Verified = -1..+1 group falcon maintainers
-	submit = group falcon maintainers
+	create = group motorola msm8226
+	push = group motorola msm8226
+	label-Code-Review = -2..+2 group motorola msm8226
+	label-Verified = -1..+1 group motorola msm8226
+	submit = group motorola msm8226
