--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [access "refs/heads/*"]
-	create = group motorola msm8226
-	push = group motorola msm8226
-	label-Code-Review = -2..+2 group motorola msm8226
-	label-Verified = -1..+1 group motorola msm8226
-	submit = group motorola msm8226
+	create = group motorola_msm8226
+	push = group motorola_msm8226
+	label-Code-Review = -2..+2 group motorola_msm8226
+	label-Verified = -1..+1 group motorola_msm8226
+	submit = group motorola_msm8226
