--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -41,5 +41,14 @@ service sensord /system/bin/sensord
     user root
     class main
 
+service dtv-jelly /system/bin/jellyservice
+   class main
+   user system
+   group system audio camera graphics inet net_bt net_bt_admin net_raw sdcard_rw
+   disabled
+
 on property:init.svc.zygote=restarting
     restart sensord
+
+on property:ro.boot.radio=0x7
+    enable dtv-jelly
